--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#000080</color>
+    <color name="light_blue">#F5FBFF</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
