vaodyssey: added filter tools for product list

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
+    android:paddingTop="?android:attr/actionBarSize"
     tools:context=".features.product_details.activities.ProductDetailsActivity">
 
     <fragment
