--- a/app/src/main/res/layout/product_quantity_number_picker_custom.xml
+++ b/app/src/main/res/layout/product_quantity_number_picker_custom.xml
@@ -9,7 +9,7 @@
         android:layout_width="40dp"
         android:layout_height="match_parent"
         android:padding="0dp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:background="@drawable/curved_quantity_controls_button"
         android:id="@+id/decrement"
         android:textStyle="bold"
@@ -30,8 +30,8 @@
         android:layout_width="40dp"
         android:layout_height="match_parent"
         android:padding="0dp"
-        android:textSize="25sp"
-        android:textColor="@android:color/black"
+        android:textSize="23sp"
+        android:textColor="@android:color/white"
         android:background="@drawable/curved_quantity_controls_button"
         android:id="@+id/increment"
         android:text="+"/>
