vaodyssey: fixed bottom products hidden on product list screen, due to FrameLayout sizing.

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
-    android:paddingTop="?android:attr/actionBarSize"
+    android:background="@color/white"
+    android:layout_marginTop="?android:attr/actionBarSize"
     tools:context=".features.product_details.activities.ProductDetailsActivity">
 
     <fragment
