--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,10 @@
     android:orientation="vertical"
     tools:context=".features.main.activities.MainActivity">
 
-
     <FrameLayout
         android:id="@+id/mainFrameLayout"
-        android:layout_marginTop="?android:attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottomNavigationBar"
-        android:layout_gravity="start"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
