--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,29 +1,29 @@
-
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="50dp">
+    android:padding="50dp"
+    tools:context=".features.auth.fragments.RegisterFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:layout_marginTop="50dp"
         android:layout_gravity="left"
-        android:textSize="40dp"
-        android:text="Register"
+        android:layout_marginTop="50dp"
         android:fontFamily=""
+        android:text="Register"
+        android:textColor="@color/black"
         android:textFontWeight="700"
-        ></TextView>
+        android:textSize="40dp"></TextView>
 
     <EditText
         android:id="@+id/firstname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp"
         android:ems="10"
@@ -35,11 +35,11 @@
         android:id="@+id/lastname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
         android:layout_marginTop="10dp"
+        android:ems="10"
         android:hint="Last name"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true" />
@@ -48,11 +48,11 @@
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
         android:layout_marginTop="10dp"
+        android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true" />
@@ -61,11 +61,11 @@
         android:id="@+id/phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
         android:layout_marginTop="10dp"
+        android:ems="10"
         android:hint="Mobile Phone"
         android:inputType="phone|number"
         android:selectAllOnFocus="true" />
@@ -74,9 +74,9 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_alignStart="@+id/editText1"
         android:layout_below="@+id/editText1"
+        android:layout_alignStart="@+id/editText1"
+        android:layout_alignLeft="@+id/editText1"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Password"
@@ -86,13 +86,12 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="30dp"
         android:text="Register"
         android:textSize="16sp"
         android:textStyle="normal|bold" />
-
 
 
     <LinearLayout
@@ -104,23 +103,26 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:layout_gravity="left"
-            android:textSize="16dp"
             android:layout_marginTop="26dp"
-            android:text="You already have an account ?"
             android:fontFamily=""
+            android:text="You already have an account ?"
+            android:textColor="@color/black"
             android:textFontWeight="400"
-            ></TextView>
+            android:textSize="16dp"></TextView>
+
         <TextView
+            android:id="@+id/loginTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:text="Login"
-            android:fontFamily=""
-            android:textFontWeight="700"
             android:layout_marginLeft="5dp"
-            ></TextView>
+            android:fontFamily=""
+            android:text="Login"
+            android:textColor="@color/black"
+            android:textFontWeight="700"
+            android:textSize="16dp"
+            android:clickable="true"/>
+
     </LinearLayout>
 </LinearLayout>
+
