--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -119,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 expandableTextView:animDuration="100"
+                android:layout_marginBottom="5dp"
                 expandableTextView:maxCollapsedLines="5">
 
                 <!-- simple text view  -->
