vaodyssey: added Search Bar, and redesigned Filter + Sort Bars

--- a/app/src/main/res/drawable/product_card_view.xml
+++ b/app/src/main/res/drawable/product_card_view.xml
@@ -9,7 +9,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="@color/purple_500" >
+        android:color="@color/dark_blue" >
     </stroke>
 
     <padding
