--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/curved_checkout_fragment"
     tools:context=".features.product_details.fragments.CheckoutFragment"
     xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp">
+    android:padding="5dp">
 
     <com.travijuu.numberpicker.library.NumberPicker
         android:id="@+id/number_picker"
@@ -23,6 +23,9 @@
         numberpicker:value="-5"
         numberpicker:custom_layout="@layout/product_quantity_number_picker_custom"/>
 
+
+
+
     <LinearLayout
         android:id="@+id/priceAndCheckoutSection"
         android:layout_width="wrap_content"
@@ -32,29 +35,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="horizontal">
 
-        <!-- Cart icon -->
-        <TextView
-            android:layout_width="100dp"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"
-            android:background="@drawable/curved_price_tag_background"
-            android:paddingStart="16dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="12dp"
-            android:text="$10"
-            android:textColor="@android:color/white"
-            android:textSize="18dp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_vertical"
+        app:backgroundTint="@color/gold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/curved_cart_button"
+        android:drawableLeft="@drawable/ic_cart"
+        android:text="Add to cart"
+        android:textColor="@color/dark_blue"/>
+<!--        &lt;!&ndash; Cart icon &ndash;&gt;-->
+<!--        <TextView-->
+<!--            android:layout_width="100dp"-->
+<!--            android:textAlignment="center"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/curved_price_tag_background"-->
+<!--            android:padding="10dp"-->
+<!--            android:text="Add to Cart"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:textSize="16dp" />-->
 
-        <ImageButton
-            android:id="@+id/cartButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_cart"
-            android:background="@drawable/curved_cart_button"
-            android:padding="12dp"
-            android:contentDescription="Navigate to Cart"
-            />
+<!--        <ImageButton-->
+<!--            android:id="@+id/cartButton"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_cart"-->
+<!--            android:background="@drawable/curved_cart_button"-->
+<!--            android:padding="12dp"-->
+
+<!--            android:contentDescription="Navigate to Cart"-->
+<!--            />-->
     </LinearLayout>
 
 
