--- a/app/src/main/res/layout/product_quantity_number_picker_custom.xml
+++ b/app/src/main/res/layout/product_quantity_number_picker_custom.xml
@@ -1,15 +1,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="40dp"
+    android:layout_height="50dp"
     android:orientation="horizontal"
     android:background="@android:color/white">
 
     <Button
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:padding="0dp"
         android:textColor="@android:color/white"
+        android:textSize="20dp"
         android:background="@drawable/curved_quantity_controls_button"
         android:id="@+id/decrement"
         android:textStyle="bold"
@@ -20,17 +21,19 @@
         android:background="@android:color/white"
         android:layout_height="match_parent"
         android:text="1"
-        android:textSize="20dp"
+        android:textSize="26dp"
         android:textColor="@android:color/black"
         android:inputType="number"
         android:id="@+id/display"
         android:gravity="center"
         />
     <Button
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
+
         android:padding="0dp"
-        android:textSize="23sp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:textColor="@android:color/white"
         android:background="@drawable/curved_quantity_controls_button"
         android:id="@+id/increment"
