--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,15 @@
         <item name="android:textColor">#000000</item>
 
     </style>
+
+    <style name="DarkBlueSpinnerStyle">
+        <item name="android:background">@drawable/bg_filter_by_spinner_up</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Style for Spinner dropdown items -->
+    <style name="DarkBlueSpinnerItemStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/dark_blue</item>
+    </style>
 </resources>
