--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/curved_checkout_fragment"
-    tools:context=".features.product_details.fragments.CheckoutFragment"
-    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp">
+    android:padding="5dp"
+    tools:context=".features.product_details.fragments.CheckoutFragment">
 
     <com.travijuu.numberpicker.library.NumberPicker
         android:id="@+id/number_picker"
@@ -16,59 +16,35 @@
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        numberpicker:custom_layout="@layout/product_quantity_number_picker_custom"
         numberpicker:focusable="false"
         numberpicker:max="10"
         numberpicker:min="0"
         numberpicker:unit="1"
-        numberpicker:value="-5"
-        numberpicker:custom_layout="@layout/product_quantity_number_picker_custom"/>
-
-
+        numberpicker:value="-5" />
 
 
     <LinearLayout
         android:id="@+id/priceAndCheckoutSection"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center_vertical"
-        app:backgroundTint="@color/gold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/curved_cart_button"
-        android:drawableLeft="@drawable/ic_cart"
-        android:text="Add to cart"
-        android:textColor="@color/dark_blue"/>
-<!--        &lt;!&ndash; Cart icon &ndash;&gt;-->
-<!--        <TextView-->
-<!--            android:layout_width="100dp"-->
-<!--            android:textAlignment="center"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@drawable/curved_price_tag_background"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="Add to Cart"-->
-<!--            android:textColor="@android:color/white"-->
-<!--            android:textSize="16dp" />-->
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/cartButton"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:src="@drawable/ic_cart"-->
-<!--            android:background="@drawable/curved_cart_button"-->
-<!--            android:padding="12dp"-->
-
-<!--            android:contentDescription="Navigate to Cart"-->
-<!--            />-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:background="@drawable/curved_cart_button"
+            android:drawableLeft="@drawable/ic_cart"
+            android:gravity="center_vertical"
+            android:text="Add to cart"
+            android:textColor="@color/dark_blue"
+            app:backgroundTint="@color/gold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
