--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -10,7 +10,7 @@
     tools:context=".features.product_details.fragments.CheckoutFragment">
 
     <com.travijuu.numberpicker.library.NumberPicker
-        android:id="@+id/number_picker"
+        android:id="@+id/quantityPicker"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
@@ -34,6 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
+            android:id="@+id/addToCartButton"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:background="@drawable/curved_cart_button"
