--- a/app/src/main/res/drawable/bg_sort_by_spinner_up.xml
+++ b/app/src/main/res/drawable/bg_sort_by_spinner_up.xml
@@ -9,7 +9,8 @@
                     <stroke android:width="1sp" android:color="@color/dark_blue"/>
                     <padding android:right="12dp"
                         android:left="12dp"/>
-                    <corners android:bottomLeftRadius="4dp"/>
+                    <corners
+                        android:bottomRightRadius="4dp"/>
                 </shape>
 
             </item>
