--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,18 +16,45 @@
 
     </style>
 
-    <style name="DarkBlueSpinnerStyle">
-        <item name="android:background">@drawable/bg_filter_by_spinner_up</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
+<!--    <style name="DarkBlueSpinnerStyle">-->
+<!--        <item name="android:background">@drawable/bg_filter_by_spinner_up</item>-->
+<!--        <item name="android:textColor">@color/white</item>-->
+<!--    </style>-->
 
     <!-- Style for Spinner dropdown items -->
-    <style name="DarkBlueSpinnerItemStyle">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/dark_blue</item>
+<!--    <style name="DarkBlueSpinnerItemStyle">-->
+<!--        <item name="android:textColor">@color/white</item>-->
+<!--        <item name="android:background">@color/dark_blue</item>-->
+<!--    </style>-->
+<!--    <style name="DialogAnimation">-->
+<!--        <item name="android:windowEnterAnimation">@anim/bottom_sheet_slide_in</item>-->
+<!--        <item name="android:windowExitAnimation">@anim/bottom_sheet_slide_out</item>-->
+<!--    </style>-->
+    <style name="BottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
     </style>
-    <style name="DialogAnimation">
-        <item name="android:windowEnterAnimation">@anim/bottom_sheet_slide_in</item>
-        <item name="android:windowExitAnimation">@anim/bottom_sheet_slide_out</item>
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+    <style name="PriceSingleOptionButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/single_option_bg</item>
+        <item name="android:textColor">@color/dark_blue</item>
+    </style>
+
+
+
+    <style name="App.Slider" parent="@style/Widget.MaterialComponents.Slider">
+        <item name="labelStyle">@style/App.Tooltip</item>
+    </style>
+
+    <style name="App.Tooltip" parent="Widget.MaterialComponents.Tooltip">
+        <!-- background color of the Tooltip -->
+        <item name="backgroundTint">@color/teal_200</item>
+        <!-- textAppearance of the Tooltip -->
+        <item name="android:textAppearance">@style/TextAppearance.App.Tooltip</item>
+    </style>
+
+    <style name="TextAppearance.App.Tooltip" parent="TextAppearance.MaterialComponents.Tooltip">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
