--- a/app/src/main/res/layout/product_card_cart_view.xml
+++ b/app/src/main/res/layout/product_card_cart_view.xml
@@ -16,7 +16,7 @@
         app:justifyContent="space_between"
         android:padding="15dp">
         <ImageView
-            android:id="@+id/productImage"
+            android:id="@+id/productCartImage"
             android:layout_width="0dp"
             android:layout_height="110dp"
             app:layout_flexBasisPercent="30%"/>
@@ -28,7 +28,7 @@
             android:layout_marginStart="10dp"
         >
             <TextView
-                android:id="@+id/productName"
+                android:id="@+id/productCartName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
@@ -38,7 +38,7 @@
                 android:text="Default Product Text"
                 />
             <TextView
-                android:id="@+id/productPrice"
+                android:id="@+id/productCartPrice"
                 android:layout_gravity="left"
                 android:textStyle="bold"
                 android:layout_width="match_parent"
@@ -56,7 +56,7 @@
         app:justifyContent="space_between"
         app:alignItems="center">
         <TextView
-            android:id="@+id/remove"
+            android:id="@+id/cartRemove"
             android:layout_gravity="left"
             android:textStyle="bold"
             android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
             />
 
         <com.travijuu.numberpicker.library.NumberPicker
-            android:id="@+id/number_picker"
+            android:id="@+id/cartNumberPicker"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
