--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -33,6 +33,7 @@
                                 android:textStyle="bold"
                                 />
                             <TextView
+                                android:id="@+id/totalPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="$69.420"
