--- a/app/src/main/res/layout/sort_by_single_option.xml
+++ b/app/src/main/res/layout/sort_by_single_option.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:layout_margin="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:gravity="left|center_vertical"
     style="@style/PriceSingleOptionButtonStyle"
     android:text="Something I dunno">
