--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,6 +53,18 @@
         android:hint="Enter your password"
         android:inputType="textPassword" />
 
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:fontFamily=""
+        android:text=""
+        android:layout_marginTop="10dp"
+        android:textColor="@color/red"
+        android:textFontWeight="300"
+        android:textSize="18dp"></TextView>
+
     <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
