--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,14 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".features.user.fragments.UserFragment"
     android:padding="20dp"
+    android:weightSum="10"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/userProfileLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginVertical="25dp"
+        android:layout_weight="0.5"
         android:weightSum="6"
-        android:layout_gravity="center_horizontal">
+        android:orientation="horizontal">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -26,25 +29,40 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="5dp">
             <TextView
+                android:id="@+id/userProfileLinearLayout_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dummy User Name"
                 android:textSize="20dp"
                 android:textStyle="bold"/>
             <TextView
+                android:id="@+id/userProfileLinearLayout_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="dummyemail@gmail.com"
                 android:textSize="16dp"
+                android:textColor="@color/dark_gray"
                 android:textStyle="normal"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/userOptionsLinearLayout"
+        android:layout_weight="8"
+        android:layout_marginVertical="25dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:orientation="vertical">
     </LinearLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/userLogoutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_weight="0.5"
+        android:background="@drawable/curved_logout_button_bg"/>
 
 </LinearLayout>
