--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:selectAllOnFocus="true" />
 
     <EditText
@@ -54,7 +54,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Confirm Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:selectAllOnFocus="true" />
 
     <EditText
