--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -7,7 +7,11 @@
     android:padding="20dp"
     android:weightSum="10"
     android:orientation="vertical">
-
+    <ProgressBar
+        android:id="@+id/user_ProgressBar"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
     <LinearLayout
         android:id="@+id/userProfileLinearLayout"
         android:layout_width="match_parent"
@@ -54,6 +58,7 @@
         android:layout_marginTop="50dp"
         android:orientation="vertical">
     </LinearLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/userLogoutButton"
         android:layout_width="match_parent"
