vaodyssey: attached view Orders to API, and fixed app crashing when no data is returned from API

--- a/app/src/main/res/layout/fragment_user_orders.xml
+++ b/app/src/main/res/layout/fragment_user_orders.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical"
     android:weightSum="10"
     tools:context=".features.orders.UserOrdersFragment">
+    <ProgressBar
+        android:id="@+id/userOrdersProgressBar"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ordersRecyclerView"
         android:layout_width="match_parent"
