--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -36,7 +36,7 @@
                                 android:id="@+id/totalPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="$69.420"
+                                android:text="0 VND"
                                 android:textColor="@color/white"
                                 android:textStyle="bold"
                                 />
