--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -59,15 +59,15 @@
         android:orientation="vertical">
     </LinearLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/userLogoutButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_weight="0.5"
-        android:background="@drawable/curved_logout_button_bg"/>
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/userLogoutButton"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Logout"-->
+<!--        android:textSize="16dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:layout_weight="0.5"-->
+<!--        android:background="@drawable/curved_logout_button_bg"/>-->
 
 </LinearLayout>
