--- a/app/src/main/res/layout/user_order_card_view.xml
+++ b/app/src/main/res/layout/user_order_card_view.xml
@@ -75,6 +75,7 @@
         android:layout_marginVertical="15dp"
         android:weightSum="3">
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/userOrder_detailsButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Details"
